--- a/configure.ac
+++ b/configure.ac
@@ -9,8 +9,8 @@
 # - increase clutter_micro_version to the next odd number
 # - increase clutter_interface_version to the next odd number
 m4_define([clutter_major_version], [1])
-m4_define([clutter_minor_version], [7])
-m4_define([clutter_micro_version], [3])
+m4_define([clutter_minor_version], [99])
+m4_define([clutter_micro_version], [1])
 
 # • for stable releases: increase the interface age by 1 for each release;
 #   if the API changes, set to 0. interface_age and binary_age are used to
@@ -42,8 +42,9 @@ m4_define([clutter_release_status],
 
 m4_define([clutter_version], [clutter_major_version.clutter_minor_version.clutter_micro_version])
 
-# change this only when breaking the API
-m4_define([clutter_api_version], [1.0])
+# change these only when breaking the API
+m4_define([clutter_api_version], [2.0])
+m4_define([clutter_api_version_am], [2_0])
 
 AC_PREREQ([2.63])
 
@@ -67,7 +68,7 @@ AC_SUBST([CLUTTER_MINOR_VERSION],  [clutter_minor_version])
 AC_SUBST([CLUTTER_MICRO_VERSION],  [clutter_micro_version])
 AC_SUBST([CLUTTER_VERSION],        [clutter_version])
 AC_SUBST([CLUTTER_API_VERSION],    [clutter_api_version])
-AC_SUBST([CLUTTER_API_VERSION_AM], [$CLUTTER_MAJOR_VERSION\_0])
+AC_SUBST([CLUTTER_API_VERSION_AM], [clutter_api_version_am])
 AC_SUBST([CLUTTER_RELEASE_STATUS], [clutter_release_status])
 
 m4_define([lt_current],  [m4_eval(100 * clutter_minor_version + clutter_micro_version - clutter_interface_age)])
@@ -914,7 +915,7 @@ dnl === I18N ==================================================================
 AM_GNU_GETTEXT_VERSION([0.17])
 AM_GNU_GETTEXT([external])
 
-GETTEXT_PACKAGE="clutter-1.0"
+GETTEXT_PACKAGE="clutter-2.0"
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],
                    ["$GETTEXT_PACKAGE"],
