--- a/clutter/Makefile.am
+++ b/clutter/Makefile.am
@@ -345,26 +345,9 @@ cogl_source_h_priv = \
 
 cogl_source_c_priv =
 
-if SUPPORT_X11
-# For compatability with the old GLX backend
-#
-# Note: there wasn't actually anything GLX specific so we can add
-# the compatability if clutter supports x11
-backend_source_c += $(srcdir)/cogl/clutter-glx-texture-pixmap.c
-glx_source_h = $(srcdir)/cogl/clutter-glx-texture-pixmap.h \
-	       $(srcdir)/cogl/clutter-glx.h
-clutterglx_includedir = $(clutter_includedir)/glx
-clutterglx_include_HEADERS = $(glx_source_h)
-
-clutter-glx-$(CLUTTER_API_VERSION).pc: clutter-$(CLUTTER_API_VERSION).pc
-	$(QUIET_GEN)cp -f $< $(@F)
-
-pc_files += clutter-glx-$(CLUTTER_API_VERSION).pc
-endif
-
 if SUPPORT_GLX
-backend_source_h += $(cogl_source_h) $(glx_source_h)
-backend_source_c += $(cogl_source_c) $(glx_source_c)
+backend_source_h += $(cogl_source_h)
+backend_source_c += $(cogl_source_c)
 backend_source_h_priv += $(cogl_source_h_priv)
 endif # SUPPORT_GLX
 
