Update test wrapper batch generation
Put the full command to call the interactive and conform test programs
in the "big" script that calls all the various tests, instead of calling
the individual .bat files.

The individual .bat files are still generated as before.

--- a/tests/interactive/Makefile.am
+++ b/tests/interactive/Makefile.am
@@ -102,8 +102,8 @@ stamp-test-interactive: Makefile test-interactive$(EXEEXT)
 			;; \
 		esac; \
 		( echo "test-interactive $$test_bin" ) > $$test_bin.bat ; \
+		( echo "test-interactive $$test_bin" ) >> test-interactive.bat ; \
 	done \
-	&& ls *.bat > test-interactive.bat	\
 	&& cp *.bat $(top_srcdir)/build/win32/
 
 clean-wrappers:
