--- a/tests/conform/Makefile.am
+++ b/tests/conform/Makefile.am
@@ -123,11 +123,11 @@ stamp-test-conformance: Makefile $(srcdir)/test-conform-main.c
 		( echo "#!/bin/sh" ; echo "$(abs_builddir)/test-launcher.sh '$$i' \"\$$@\"" ) > $$unit$(SHEXT) ; \
 		( echo "#!/bin/sh" ; echo "exec $(abs_builddir)/test-conformance$(EXEEXT) -p $$i \"\$$@\"" ) > wrappers/$$unit$(SHEXT) ; \
 		( echo "test-conformance$(EXEEXT) -p $$i" ) > $$unit.bat ; \
+		( echo "test-conformance$(EXEEXT) -p $$i" ) >> test-conformance.bat ; \
 		chmod +x $$unit$(SHEXT); \
 		chmod +x wrappers/$$unit$(SHEXT); \
 		echo "/$$unit$(SHEXT)" >> .gitignore; \
 	done \
-	&& ls *.bat > test-conformance.bat	\
 	&& cp *.bat $(top_srcdir)/build/win32/	\
 	&& echo timestamp > $(@F)
 
