build: Link Cogl directly against libdl
Cogl uses dlopen() directly but doesn't link against dl, thus linking
against Clutter fails when using --as-needed.

--- a/clutter/cogl/cogl/Makefile.am
+++ b/clutter/cogl/cogl/Makefile.am
@@ -327,7 +327,7 @@ include $(top_srcdir)/build/autotools/Makefile.am.enums
 
 noinst_LTLIBRARIES += libclutter-cogl.la
 
-libclutter_cogl_la_LIBADD = -lm $(CLUTTER_LIBS)
+libclutter_cogl_la_LIBADD = -lm -ldl $(CLUTTER_LIBS)
 libclutter_cogl_la_SOURCES = $(cogl_sources_c)
 nodist_libclutter_cogl_la_SOURCES = $(BUILT_SOURCES)
 
