--- a/configure.ac
+++ b/configure.ac
@@ -958,16 +958,20 @@ dnl ===========================================================================
 
 AC_CONFIG_FILES([
 	Makefile
-
+	config.h.win32
         README
 
 	build/Makefile
 	build/autotools/Makefile
 	build/mingw/Makefile
+	build/win32/Makefile
+	build/win32/vs9/Makefile
+	build/win32/vs10/Makefile
 
 	clutter/Makefile
         clutter/clutter-config.h
 	clutter/clutter-version.h
+	clutter/clutter-version.h.win32
 	clutter/clutter-$CLUTTER_API_VERSION.pc:clutter/clutter.pc.in
 
 	clutter/cally/cally-$CLUTTER_API_VERSION.pc:clutter/cally/cally.pc.in
