--- a/tests/interactive/Makefile.am
+++ b/tests/interactive/Makefile.am
@@ -72,7 +72,7 @@ SHEXT = $(EXEEXT)
 endif
 
 # For convenience, this provides a way to easily run individual unit tests:
-wrappers: stamp-test-interactive ../../build/win32/test-interactive.bat
+wrappers: stamp-test-interactive ../../build/win32/test-interactive-clutter.bat
 	@true
 stamp-test-interactive: Makefile test-interactive$(EXEEXT)
 	@wrapper=$(abs_builddir)/wrapper.sh ; \
@@ -93,8 +93,8 @@ stamp-test-interactive: Makefile test-interactive$(EXEEXT)
 	done \
 	&& echo timestamp > $(@F)
 
-../../build/win32/test-interactive.bat: Makefile test-interactive$(EXEEXT)
-	echo "  GEN    test-interactive.bat" ; \
+../../build/win32/test-interactive-clutter.bat: Makefile test-interactive$(EXEEXT)
+	echo "  GEN    test-interactive-clutter.bat" ; \
 	for i in $(UNIT_TESTS); \
 	do \
 		case $$i in \
@@ -102,8 +102,8 @@ stamp-test-interactive: Makefile test-interactive$(EXEEXT)
 		*.c)	test_bin=$${i%*.c} \
 			;; \
 		esac; \
-		( echo "test-interactive-clutter $$test_bin" ) > $$test_bin.bat ; \
-		( echo "test-interactive-clutter $$test_bin" ) >> test-interactive.bat ; \
+		( echo "test-interactive-clutter $$test_bin" ) > $$test_bin-clutter.bat ; \
+		( echo "test-interactive-clutter $$test_bin" ) >> test-interactive-clutter.bat ; \
 	done \
 	&& cp *.bat $(top_srcdir)/build/win32/
 
