Add a material compatibility when building with --enable-cogl2
The material compatibility layer for CoglPipelines has been removed in
Cogl 2.0. This patch copies it into Clutter when --enable-cogl2 is
enabled to increase the chance that a Clutter application will work
unmodified with the Cogl 2.0 API. The API for setting a user program
is not included because there are no longer any equivalent pipeline
functions. Also any API that was using CoglMaterialLayer is not
included because the wrappers from Cogl were using internal functions
to access the layers in that case.

--- a/clutter/Makefile.am
+++ b/clutter/Makefile.am
@@ -315,6 +315,10 @@ if USE_COGL2
 
 source_c +=							\
 	$(srcdir)/clutter-cogl-compat.c				\
+	$(srcdir)/clutter-cogl-material-compat.c		\
+	$(NULL)
+source_h +=							\
+	$(srcdir)/clutter-cogl-material-compat.h		\
 	$(NULL)
 
 else
@@ -846,7 +850,7 @@ libclutter_@CLUTTER_API_VERSION@_la_LDFLAGS = \
 	$(CLUTTER_LT_LDFLAGS) \
 	$(GCOV_LDFLAGS) \
 	-export-dynamic \
-	-export-symbols-regex "^(clutter|cally).*" \
+	-export-symbols-regex "^(clutter|cally|cogl_material).*" \
 	-rpath $(libdir) \
 	$(win32_resources_ldflag) \
 	$(NULL)
